<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".carrito">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="409dp"
        android:layout_height="736dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TableRow
            android:layout_width="214dp"
            android:layout_height="79dp"
            android:background="#00BCD4">

            <Space
                android:layout_width="100dp"
                android:layout_height="80dp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:layout_width="234dp"
            android:layout_height="80dp">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:adjustViewBounds="true"
                android:cropToPadding="false"
                android:scaleType="fitCenter"
                app:srcCompat="@android:mipmap/sym_def_app_icon"></ImageView>


            <TextView
                android:id="@+id/nombre1"
                android:layout_width="200dp"
                android:layout_height="35dp"
                android:text="Producto 1" />

            <TextView
                android:id="@+id/precio1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView" />

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#00FFFFFF"
                android:onClick="agregar_producto1"
                app:icon="@android:drawable/ic_menu_add"
                app:iconTint="@color/black"
                tools:ignore="SpeakableTextPresentCheck" />

        </TableRow>

        <TableRow
            android:layout_width="316dp"
            android:layout_height="29dp">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="64dp"
                android:layout_height="50dp"
                android:scaleType="fitCenter"
                app:srcCompat="@mipmap/ic_launcher" />

            <TextView
                android:id="@+id/nombre2"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:text="Producto 2" />

            <TextView
                android:id="@+id/precio2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView" />

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#005E4949"
                android:onClick="agregar_producto2"
                app:icon="@android:drawable/ic_menu_add"
                app:iconTint="@color/black"
                tools:ignore="SpeakableTextPresentCheck" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#00BCD4"
        android:text="ir al carrito"
        app:layout_constraintBottom_toBottomOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="@color/black"
        app:strokeWidth="1dp" />
</androidx.constraintlayout.widget.ConstraintLayout>